# bright

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
Brightness/: __init__.py  cli.py  logic.py
docs/: README.md  code-review-findings.md
scripts/: test-package.sh
tests/: pytest.ini  test_cli.py  test_logic.py
